added assignment question01

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.0.0</version>
+    </dependency>
+    <dependency>
       <groupId>info.cukes</groupId>
       <artifactId>cucumber-java</artifactId>
       <version>${cucumber.version}</version>
